[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/dialogic/Editor/Events/Parts/Text/TranslationTextEditPopup.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogic/Editor/Events/Parts/Text/TranslationKeyBrowserPopup.tscn" type="PackedScene" id=2]

[node name="TranslationTextEditPopup" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 181.0
margin_top = 143.0
margin_right = -203.0
margin_bottom = -170.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 636.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_right = 632.0
margin_bottom = 6.0
rect_min_size = Vector2( 0, 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 10.0
margin_right = 632.0
margin_bottom = 24.0

[node name="KeyValueLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 632.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "KEY_AX"
align = 1
valign = 1

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 632.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 280.0
margin_right = 632.0
margin_bottom = 300.0
alignment = 1

[node name="DoneButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 78.0
margin_right = 240.0
margin_bottom = 20.0
size_flags_horizontal = 4
text = "Save at current location"

[node name="SaveAtButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 244.0
margin_right = 321.0
margin_bottom = 20.0
text = "Save at. . ."

[node name="BrowseKeys" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 325.0
margin_right = 418.0
margin_bottom = 20.0
text = "Browse Keys"

[node name="ExitWithoutSaving" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 422.0
margin_right = 553.0
margin_bottom = 20.0
text = "Exit without saving"

[node name="TranslationKeyBrowserPopup" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -316.0
margin_top = -150.0
margin_right = 316.0
margin_bottom = 150.0

[connection signal="hide" from="VBoxContainer/HBoxContainer2/DoneButton" to="." method="_on_DoneButton_hide"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/DoneButton" to="." method="_on_DoneButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SaveAtButton" to="." method="_on_SaveAtButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/BrowseKeys" to="." method="_on_BrowseKeys_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ExitWithoutSaving" to="." method="hide"]
[connection signal="key_selected" from="TranslationKeyBrowserPopup" to="." method="_on_TranslationKeyBrowserPopup_key_selected"]
